segunda versão site

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <title>Portfólio Pessoal</title>
@@ -8,16 +10,17 @@
 
     <header>
         <h1>Aline Lorena Ramos</h1>
-        <p>Aprendiz de Programação</p>
+        <p>Aprendiz de Programação | Técnica de Informática | Trader e Investidora</p> 
     </header>
 
     <main>
         <section class="sobre-mim">
             <h2>Sobre Mim</h2>
             <p><strong>Nome:</strong> Aline Lorena</p>
-            <p><strong>Email:</strong> alinelorena217@gmail.com</p>
+            <p><strong>Email:</strong> eualineramos1@gmail.com</p>
             <p><strong>Endereço:</strong> Itaguaí - RJ</p>
-            <p><strong>Telefone:</strong> (21) 96906-9734</p>
+            <p><strong>Telefone:</strong> (21) 97082-5948</p>
+            <p>Sou uma entusiasta da tecnologia e finanças, sempre em busca de novos desafios. Como caçula de uma família grande, aprendi a ser resiliente, responsável e criativa desde cedo!</p>
         </section>
 
         <section class="educacao">
@@ -26,24 +29,53 @@
             <p><strong>Curso:</strong> Cursando Programação</p>
         </section>
 
+        <section class="experiencia">
+            <h2>Experiência Profissional</h2>
+            <ul>
+                <li>
+                    <strong>Técnica de Informática N2 (Independente) - 2019 até o momento.</strong><br>
+                    Trabalho remotamente como profissional autônoma, oferecendo suporte técnico, manutenção de sistemas e soluções em TI. 
+                </li>
+                <li>
+                    <strong>Trader e Investidora - 2023 até o momento.</strong><br>
+                   Atuo de forma independente no mercado de ações e Forex, aplicando estratégias de análise técnica e gestão de risco que me proporcionaram resultados consistentes e uma verdadeira transformação pessoal.
+                </li>
+                
+            </ul>
+            <p>Minha jornada profissional me ensinou a equilibrar autonomia com inovação, sempre priorizando resultados impactantes.</p> 
+        </section>
+
+        <section class="habilidades">
+            <h2>Habilidades</h2>
+            <ul>
+                <li>🖥️ Programação: Python, HTML/CSS, JavaScript, MQL5 (em aprendizado)</li>
+                <li>🔧 TI: Suporte técnico, redes, manutenção de hardware e sistema de telefonia </li>
+                <li>💹 Finanças: Análise de mercado, trading, investimentos</li>
+                <li>🗣️ Soft Skills: Trabalho remoto eficiente, comunicação clara, resolução de problemas</li>
+                
+            </ul>
+        </section>
+
+        <section class="projetos">
+            <h2>Projetos</h2>
+            <ul>
+                <li>
+                    <strong>Portfólio Pessoal (este site)</strong><br>
+                    Desenvolvido em HTML/CSS/JS como projeto de aprendizado em programação. Demonstra minhas habilidades iniciais em web design.
+                </li>
+                <li>
+                    <strong>Bot de Trading Simples</strong><br>
+                    Criei um script em MQL5 para automatizar análises de mercado.
+                </li>
+            </ul>
+        </section>
+
         <section class="curiosidades">
-            <h2>Família</h2>
-            <p><strong>Mãe:</strong> Angelita Ramos de Souza</p>
-            <p><strong>Pai:</strong> Cleber Júlio de Oliveira</p>
-            <p><strong>Irmãos:</strong> Tenho 6 irmãos, sendo a caçula da Família!</p>
-        </section>
-
-        <section class="preferencias">
-            <h2>Preferências</h2>
-            <p><strong>Cor preferida:</strong> Preto e Amarelo</p>
-            <p><strong>Comida preferida:</strong> Strogonoff</p>
-            <p><strong>Lugar que gostaria de conhecer:</strong> Itália</p>
-        </section>
-
-        <section class="trabalho">
-            <h2>Trabalho</h2>
-            <p><strong>Profissão:</strong> Técnica de Informática N2, Trader e Investidora.</p>
-            <p><strong>Empresa:</strong> Sou uma profissional independente, trabalhando remotamente do conforto do meu escritório.</p>
+            <h2>Curiosidades Sobre Mim</h2>
+            <p><strong>Família:</strong> Mãe: Angelita | Pai: Cleber Júlio | Irmãos: Tenho 6 irmãos, sendo a caçula da família!</p>
+            <p><strong>Hobby:</strong> Aprecio momentos de lazer lendo livros, assistindo séries e ouvindo música, especialmente nos fins de semana.</p>
+            <p><strong>Curiosidades Tech:</strong> Desde nova sempre tive interesse por tecnologia, mas comecei a programar de fato quando entrei no mercado financeiro.</p>
+            <p><strong>Sonho:</strong> Explorar a Itália, imergir em sua cultura e continuar desenvolvendo minha carreira em programação de forma remota.</p>
         </section>
 
         <!-- Redes sociais -->
