css alterado e div add em novos campos

--- a/index.html
+++ b/index.html
@@ -9,24 +9,32 @@
 <body>
 
     <header>
-        <h1>Aline Lorena Ramos</h1>
+        <h1>Aline Lorena</h1>
         <p>Aprendiz de Programação | Técnica de Informática | Trader e Investidora</p> 
     </header>
 
     <main>
         <section class="sobre-mim">
             <h2>Sobre Mim</h2>
-            <p><strong>Nome:</strong> Aline Lorena</p>
+            <div class="center-dados">
+            <p><strong>Nome:</strong> Aline Lorena Ramos</p>
+            <p><strong>Idade:</strong> 24 Anos</p>
             <p><strong>Email:</strong> eualineramos1@gmail.com</p>
             <p><strong>Endereço:</strong> Itaguaí - RJ</p>
             <p><strong>Telefone:</strong> (21) 97082-5948</p>
-            <p>Sou uma entusiasta da tecnologia e finanças, sempre em busca de novos desafios. Como caçula de uma família grande, aprendi a ser resiliente, responsável e criativa desde cedo!</p>
+            </div>
+             <div class="center-dados">
+            <p>Sou uma entusiasta da tecnologia e finanças, sempre em busca de novos desafios. <br>
+            Como caçula de uma família grande, aprendi a ser resiliente, responsável e criativa desde cedo!</p>
+         </div>
         </section>
 
         <section class="educacao">
             <h2>Escolaridade e Curso</h2>
+            <div class="center-dados">
             <p><strong>Escolaridade:</strong> Ensino Médio Completo</p>
             <p><strong>Curso:</strong> Cursando Programação</p>
+            </section>
         </section>
 
         <section class="experiencia">
@@ -42,7 +50,10 @@
                 </li>
                 
             </ul>
-            <p>Minha jornada profissional me ensinou a equilibrar autonomia com inovação, sempre priorizando resultados impactantes.</p> 
+            <div class="center-dados">
+            <p>Minha jornada profissional me ensinou a equilibrar autonomia com inovação, <br>
+                sempre priorizando resultados impactantes.</p> 
+             </div>
         </section>
 
         <section class="habilidades">
