mudança em texto experiencia

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Experiência Profissional</h2>
             <ul>
                 <li>
-                    <strong>Técnica de Informática N2 (Independente) - 2019 até o momento.</strong><br>
+                    <strong>Técnica de Informática N2 - 2019 até o momento.</strong><br>
                     Trabalho remotamente como profissional autônoma, oferecendo suporte técnico, manutenção de sistemas e soluções em TI. 
                 </li>
                 <li>
